--- a/HIC-YOLOv5.ipynb
+++ b/HIC-YOLOv5.ipynb
@@ -106,7 +106,7 @@
    },
    "outputs": [],
    "source": [
-    "!python HIC-Yolov5/detect.py --weights model/model_hicyolov5.pt --source Meteory_format_YOLOv5_aug/test/images --iou 0.45 --conf 0.3 --img 1280 --save-txt --save-conf"
+    "!python HIC-YOLOv5/HIC-Yolov5/detect.py --weights model/model_hicyolov5.pt --source Meteory_format_YOLOv5_aug/test/images --iou 0.45 --conf 0.3 --img 1280 --save-txt --save-conf"
    ]
   }
  ],
